<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bcklogin"
    tools:context=".bacaan.BacaanActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_shubuh"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="12dp"
        android:text="@string/bacaan_sholat_shubuh"
        android:backgroundTint="@color/dark_Purple"
        android:textColor="@color/cream"
        android:textSize="18sp"
        app:icon="@drawable/ic_baseline_mosque_24"
        app:layout_constraintBottom_toTopOf="@id/btn_zuhur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_zuhur"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:paddingVertical="12dp"
        android:text="@string/bacaan_sholat_zuhur"
        android:backgroundTint="@color/dark_Purple"
        android:textColor="@color/cream"
        android:textSize="18sp"
        app:icon="@drawable/ic_baseline_mosque_24"
        app:layout_constraintBottom_toTopOf="@id/btn_ashar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_shubuh" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ashar"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:paddingVertical="12dp"
        android:text="@string/bacaan_sholat_ashar"
        android:backgroundTint="@color/dark_Purple"
        android:textColor="@color/cream"
        android:textSize="18sp"
        app:icon="@drawable/ic_baseline_mosque_24"
        app:layout_constraintBottom_toTopOf="@id/btn_maghrib"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_zuhur" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_maghrib"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:paddingVertical="12dp"
        android:text="@string/bacaan_sholat_maghrib"
        android:backgroundTint="@color/dark_Purple"
        android:textColor="@color/cream"
        android:textSize="18sp"
        app:icon="@drawable/ic_baseline_mosque_24"
        app:layout_constraintBottom_toTopOf="@id/btn_isya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_ashar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_isya"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:paddingVertical="12dp"
        android:text="@string/bacaan_sholat_isya"
        android:backgroundTint="@color/dark_Purple"
        android:textColor="@color/cream"
        android:textSize="18sp"
        app:icon="@drawable/ic_baseline_mosque_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_maghrib" />

</androidx.constraintlayout.widget.ConstraintLayout>